# transformer-mppi

./: README.md  pyproject.toml
benchmarks/: benchmark_jax_runtime.py
diagnostics/: __init__.py  compare_controllers_navigation.py  compare_controllers_racing.py
src/: __init__.py  transformer.py
src/controllers/: __init__.py  mppi.py  transformer.py
src/environment/: __init__.py  maps.py  navigation_2d_env.py  racing_env.py
src/utils/: helpers.py  obstacles.py  path_generate.py
training/: __init__.py  data_generator.py  generate_data_and_train_transformer.py  main_transformer_2d_obstacle.py  main_transformer_autonomous_racing_new_mppi.py  train_transformer.py
transformer_mppi/: __init__.py  cli.py  config.py
transformer_mppi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
transformer_mppi/controllers/: __init__.py  mppi.py  transformer.py  transformer_mppi.py
transformer_mppi/environment/: __init__.py  maps.py  navigation_2d.py  obstacles.py  racing.py
transformer_mppi/pipelines/: __init__.py  reproduce.py
transformer_mppi/training/: __init__.py  artifacts.py  trainer.py
transformer_mppi/utils/: __init__.py  jax_utils.py  math.py  path.py
