[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-mppi"
version = "0.1.0"
description = "Transformer-initialized Model Predictive Path Integral control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Transformer MPPI Contributors"}
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "pandas>=2.0"
]

[project.scripts]
transformer-mppi = "transformer_mppi.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["transformer_mppi*"]
